--- a/indexL.html
+++ b/indexL.html
@@ -12,9 +12,10 @@
    
     <h1>EDUCATION</h1>
     <img src="beca.png">
-   </div>
-   
-   
+   <p>lorem ipsum dolor sit amet.</p>
+   <input class="botao" type="button" value="LOREM">    
+   <p2> lorem ipsum dolor sit amet, consectetuer adipiscing ellif, sed diam nonummy nibih euismod.</p2>
+    </div>
    
 </body>
 </html>
